[gd_scene load_steps=8 format=3 uid="uid://bbw4fldcinyae"]

[ext_resource type="Texture2D" uid="uid://bped01tsjeycn" path="res://assets/sprites/coin.png" id="1_b8vy3"]
[ext_resource type="Script" path="res://game/item/scripts/slot_ui.gd" id="1_kpmom"]
[ext_resource type="Texture2D" uid="uid://dl503ig4136s3" path="res://assets/sprites/inventory/PXUI-Basic/checkbox_example.png" id="2_5gien"]
[ext_resource type="Texture2D" uid="uid://c114xeek3qctq" path="res://assets/sprites/inventory/PXUI-Basic/panel_Example1.png" id="2_06pf4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v7c41"]
texture = ExtResource("2_06pf4")
expand_margin_top = 18.0
expand_margin_bottom = 18.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kkxd5"]
texture = ExtResource("2_5gien")
texture_margin_left = 25.0
texture_margin_top = 25.0
texture_margin_right = 25.0
texture_margin_bottom = 25.0
expand_margin_left = 15.0
expand_margin_top = 15.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ouyh4"]
atlas = ExtResource("1_b8vy3")
region = Rect2(0, 0, 16, 16)

[node name="SlotUi" type="Control"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1520.0
offset_bottom = -820.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kpmom")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v7c41")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_kkxd5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ItemTexture" type="TextureRect" parent="MarginContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = SubResource("AtlasTexture_ouyh4")

[node name="Amount" type="Label" parent="MarginContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 22
text = "99"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
